2005-02-04 MINAMI Hirokazu <minami@mistfall.net>
	
	* xwindow/x_screen.c: During mouse tracking,
	try to report sane location even if there was no character
	under clicked column.
	(This is not perfect when varible-width font is used, though)

2005-02-04 MINAMI Hirokazu <minami@mistfall.net>

	* man/mlterm.1: added description for PREV/NEXT_PTY. 
	(SF#1110868. Thanks to John Foerch)

2005-02-03 Seiichi SATO <ssato@sh.rim.or.jp>

	* mlterm/ml_edit.c (ml_edit_go_back),
	  mlterm/ml_vt100_parser.c (parse_vt100_escape_sequence):
	  fixed #1048321 (autowrap test of vttest-2.7).

2005-02-03 MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_screen.c:
	- changed to ignore un-reportable mouse click.
	- fixed a bug for sending button4/5 events.

2005-02-03 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1: removed xim_open_in_startup. (#1115198)
	* etc/main.ja:
	- removed xim_open_in_startup. (#1115198)
	- added input_method

2005-02-02 MINAMI Hiroakzu <minami@mistfall.net>

	* xwindow/x_screen.c: For mouse tracking, 
	report the maximum value, not random value, when the clicked
	position was out of protocol-suppoted range.

2005-01-31 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/version.h.in: 2.9.1 post -> 2.9.2 pre
	* configure.in: utmp is still experimental feature.

2005-01-28 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_im_candidate_screen.c (draw_screen_vertical):
	  snprintf() -> kik_snprintf

2005-01-27 Seiichi SATO <ssato@sh.rim.or.jp>

	* contrib/scrollbar/pixmap_engine/HOWTO.html,
	  contrib/scrollbar/pixmap_engine/HOWTO.images/fig*.png: new files.

	The following changes are made to fix compilation errors on mingw32.
	* kiklib/src/Makefile.in, mkf/lib/Makefile.in:
	  -rpath $(PREFIX)/lib  --->  -rpath $(LIBDIR)
	* mkf/configure.in:
	  KIK_LIBS='-L${top_builddir}/kiklib/src -lkik'
	* configure.in:
	  KIK_LIBS_FOR_MODULE='-L${top_builddir}/kiklib/src -lkik'
	  MKF_LIBS_FOR_MODULE='-L${top_builddir}/mkf/lib -lmkf'
